Fixed text overflow on food and drinks page comments added

--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,12 @@ a:active {
     position: relative;
     text-align: center;
 }
+#home-links p {
+    text-align: center; 
+    column-count: 1;
+    max-width: 100%; /* Ensure text doesn't overflow */
+}
+
 
 #home-links div a {
     position: absolute;
@@ -286,13 +292,17 @@ a:active {
     height: 200px;
     border: 1px solid #f1f1f1;
 }
-
-#home-links .flip-box {
+/* the food cards in foodanddrinks page */
+#home-links .food-card {
+    cursor: pointer;
     background-color: transparent;
-    width: 610px;
-    height: 200px;
-    border: 1px solid #f1f1f1;
+    width: 400pt;
+    height: 300pt;
+    border: 1px solid white;
+
 }
+
+/* container of a flipping card */
 
 #home-links .flip-box-inner {
     position: relative;
@@ -303,6 +313,7 @@ a:active {
     transform-style: preserve-3d;
 }
 
+/* do an action when a coursour is on a flipping card */
 #home-links .card2:hover .flip-box-inner {
     transform: rotateY(180deg);
 }
@@ -311,21 +322,35 @@ a:active {
     transform: rotateY(180deg);
 }
 
+#home-links .food-card:hover .flip-box-inner {
+    transform: rotateY(180deg);
+}
+
 #home-links .flip-box-front,
-.flip-box-back {
+#home-links .flip-box-back,
+#home-links .flip-food-box-back{
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
 }
-
+/* front of flipping cards on index page */
 #home-links .flip-box-front {
     background-color: #bbb;
     color: black;
 }
-
+/* back of a card */
 #home-links .flip-box-back {
     background-color: #555;
+    color: white;
+    transform: rotateY(180deg);
+}
+/* front of flipping cards on foodanddrinks page */
+
+#home-links .flip-food-box-back {
+    text-align: center;
+
+    background-color: #e28570;
     color: white;
     transform: rotateY(180deg);
 }
@@ -496,6 +521,7 @@ table {
     margin: auto;
     display: block;
 }
+
 .accommodation-item body {
     font-family: 'Roboto Mono', monospace;
     margin: 0;
@@ -544,80 +570,7 @@ table {
     background-color: #d87862;
   }
 
-/**** Food and drinks page ****/
 
-#food-links {
-    background-color: #b8624f;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px; 
-    /* must be the same as the larger card is wider */
-    padding: 30px 30px; 
-}
-
-#food-links div {
-    position: relative;
-    text-align: center;
-}
-#food-links p {
-    text-align: center; 
-    column-count: 1;
-}
-
-
-#food-links div img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
-
-#food-links .card1 {
-    cursor: pointer;
-    background-color: transparent;
-    width: 400pt;
-    height: 300pt;
-    border: 1px solid white;
-
-}
-
-
-#food-links .flip-box-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-}
-
-
-
-#food-links .card1:hover .flip-box-inner {
-    transform: rotateY(180deg);
-}
-
-#food-links .flip-box-front,
-#food-links .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
-}
-
-#food-links .flip-box-front {
-    background-color: #bbb;
-    color: black;
-}
-
-#food-links .flip-box-back {
-    text-align: center;
-
-    background-color: #e28570;
-    color: white;
-    transform: rotateY(180deg);
-}
 
 /**** Sports page ****/
 .sports-item {
